# oberon-ai

./: pyproject.toml
app/llm/: base.py  factory.py  openai_provider.py
app/mcp_client/: client.py
app/mcp_server/: server.py
app/tools/: get_weather.py  search_engine.py  web_scraper.py
mcp/: client-sse.py  client-stdio.py  client-streamable-http.py  client_openai.py  server.py
scripts/: client.py
